QoL updates involving confirmination dialog before ending run, and avoid reload cheating

--- a/run.html
+++ b/run.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -7,7 +8,10 @@
   <link rel="manifest" href="manifest.webmanifest" />
   <link rel="stylesheet" href="styles.css" />
   <meta name="theme-color" content="#0d1a2b" />
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body class="page page--run" data-page="run">
   <header class="appbar">
     <h1>Laps</h1>
@@ -26,12 +30,35 @@
     </div>
 
     <div class="actions">
-      <button id="end-btn" class="btn btn--danger">End Race</button>
+      <button onclick="confirmEnd.showModal()" class="btn btn--danger">End Race</button>
     </div>
   </main>
 
   <div id="toast"></div>
 
+  <dialog id="confirmEnd" class="modal modal-bottom sm:modal-middle">
+    <div class="modal-box text-base-content">
+      <form method="dialog">
+        <button class="btn-sm btn-circle btn-ghost absolute right-2 top-2">✕</button>
+      </form>
+      <h3 class="text-lg font-bold">Please confirm</h3>
+      <p class="py-4">Are you sure you want to end the run? You cannot undo.</p>
+      <button id="end-btn" class="btn btn--danger">End race</button>
+      <div class="divider">OR</div>
+
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Cancel</button>
+      </form>
+    </div>
+
+    <form method="dialog" class="modal-backdrop">
+      <button>close</button>
+    </form>
+  </dialog>
+
+
   <script src="app.js"></script>
 </body>
-</html> 
+
+</html>
